# advent-of-code-rust

./: .env.sample  Cargo.toml  LICENSE.txt  README.md  justfile  setup.sh
crates/aoc2015/: Cargo.toml
crates/aoc2024/src/: prelude.rs
crates/aoc2025/: Cargo.toml
crates/aoc2025/src/: lib.rs  prelude.rs
docs/: QUICKSTART.md
scripts/: check_status.sh  download_input.sh  init_year.sh  new_day.sh  open_day.sh  run_current.sh  run_debug.sh  run_release.sh  run_submit.sh  solve.sh  stats.sh  submit.sh
